--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: auto;
   width: 90vw;
   box-sizing: border-box;
 }
